--- a/events_bulletin/src/homepage/Homepage.css
+++ b/events_bulletin/src/homepage/Homepage.css
@@ -11,6 +11,9 @@
   font-weight: medium;
   margin-top: 1rem;
 }
+#popEvents{
+  margin-top: 5rem;
+}
 .credits {
   font-size: 2rem;
   margin-top: 0.5rem;
