--- a/events_bulletin/src/homepage/Review.css
+++ b/events_bulletin/src/homepage/Review.css
@@ -9,3 +9,45 @@ input[type=radio] {
 
 }
 
+#reviewBody {
+  width: 40vw;
+  height: 10vh;
+  overflow-wrap: break-word;
+  }
+
+.pastReviews {
+  border-style: solid;
+  border-radius: 0.5rem;
+  margin: 1rem;
+}
+
+.singleReview {
+  border-style: solid;
+  border-radius: 0.5rem;
+  width: fit-content;
+  padding: 1rem;
+  margin: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.subButton {
+  background: none;
+	color: inherit;
+	border: 2px ridge ridge rgb(192, 127, 0);
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+  font-size: 25px;
+  padding: 1rem;
+  margin-left: 2rem
+}
+
+.subButton:hover {
+  color: coral;
+}
+
+#input {
+  display: inline-flex;
+}
