--- a/events_bulletin/src/navbar/Navbar.css
+++ b/events_bulletin/src/navbar/Navbar.css
@@ -1,5 +1,5 @@
 #navbarContainer {
-    background-color: #FFF7D4;
+    background-color: rgba(255, 217, 90, 0.267);
     padding: .5rem;
     display: flex;
     flex-direction: row;
@@ -20,7 +20,7 @@
 
 .navButton {
     border: none;
-    background-color: #FFF7D4;
+    background-color: inherit;
     font-size: 1.5rem;
     color: #4C3D3D;
     letter-spacing: 0.25rem;
